Fixing nav scrollbar flash

--- a/sass/universal.scss
+++ b/sass/universal.scss
@@ -155,11 +155,6 @@ header {
   z-index: 10;
   height: 0;
   width: 0;
-
-  //* Menu breakpoint
-  @include breakpoint(700) {
-    // display: none;
-  }
 }
 
 .nav-inner-wrapper {
@@ -176,7 +171,6 @@ header {
 .main-nav-reveal {
   width: 100vw;
   height: 100%;
-  overflow-y: auto;
 }
 
 .main-nav-ul {
